# oversite-demo

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: review-notes.md  source-notes.md
scripts/: inspect_local_db.py  inspect_sample.py  run_local_pipeline.py  run_pipeline.py
sql/: 001_create_derived_schema.sql  002_create_derived_views.sql
src/oversite_pipeline/: __init__.py  assets.py  cli.py  config.py  local_sqlite.py  observations.py  pipeline.py
src/oversite_pipeline/clients/: __init__.py  supabase_rest.py
src/oversite_pipeline/extract/: __init__.py  source.py
src/oversite_pipeline/load/: __init__.py  prepare.py
src/oversite_pipeline/transform/: __init__.py  graph.py  normalize.py
tests/: test_local_pipeline_script.py  test_local_sqlite.py  test_pipeline_assets.py  test_pipeline_cli.py  test_pipeline_observations.py  test_pipeline_runtime.py  test_pipeline_support.py  test_pipeline_transforms.py
